--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Responsive landing page typeset with ReactJS."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Weiss - Ingenieurbüro für Bau- und Vermessungswesen</title>
+    <title>Weiss</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
